<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@drawable/grocery_stroe_background"
    >
    <ImageView
        android:layout_width="200dp"
        android:layout_height="165dp"
        android:src = "@drawable/profile_picture"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/jordans_name"
        android:textSize="20sp"
        android:textColor="#000000"
        android:background="#99ffffff"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text= "@string/jordans_nickname"
        android:textSize="20sp"
        android:textColor="#000000"
        android:background="#99ffffff" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/Bio"
        android:textSize="20sp"
        android:textColor="#000000"
        android:background="#99ffffff" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src = "@drawable/waffle"
        android:layout_gravity="center"/>




</LinearLayout>
