<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theylion">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/imlion"
        android:layout_marginRight="114dp"
        android:layout_marginEnd="114dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/imlion"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/shampoo"
        android:id="@+id/shampoo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nickname"
        android:id="@+id/nickname"
        android:textColor="@color/andresred"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textColor="@color/andresred"
        android:id="@+id/bio"
        android:layout_below="@id/imlion"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/bio"
        android:text="@string/name"
        android:textColor="@color/andresred"
        android:id="@+id/name"
        android:textSize="40sp"/>

</RelativeLayout>