<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:baselineAligned="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Hello World!"
        android:id="@+id/textView" />

    <ImageView
        android:layout_width="310dp"
        android:layout_height="172dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/mapblackwhite"
        android:id="@+id/MapPhoto" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginBottom="2dp"
        android:background="#FFFFFF"
        android:text="@string/catherine_name"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginBottom="2dp"
        android:background="#FFFFFF"
        android:text="@string/catherine_nickname" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginBottom="2dp"
        android:background="#FFFFFF"
        android:text="@string/mealYesterday"
        android:id="@+id/mealYesterday" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:text="@string/lastMeal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background1"
        android:orientation="horizontal">

    <ImageView
       android:layout_width="150dp"
       android:layout_height="150dp"
       app:srcCompat="@drawable/catwong2"
       android:id="@+id/CatPhoto"/>

    <ImageView
       android:layout_width="150dp"
       android:layout_height="150dp"
       app:srcCompat="@drawable/food"
       android:id="@+id/imageView2"
       android:layout_weight="1" />
</LinearLayout>
</LinearLayout>


